--- a/configuring-servers/main.yml
+++ b/configuring-servers/main.yml
@@ -3,7 +3,7 @@
   gather_facts: false
   remote_user: 'ubuntu'
   vars:
-    ansible_ssh_private_key_file: #PATH TO PRIVATE KEY IN CONTORL NODE
+    ansible_ssh_private_key_file: #PATH TO PRIVATE KEY IN CONTROL NODE
     ansible_ssh_public_key_file: #PATH TO PUBLIC KEY IN CONTROL NODE
   roles:
   - update-upgrade
